[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Bullet01.gd" type="Script" id=1]
[ext_resource path="res://sprites/bullet_01a.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 12.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -10.0
scale = 3.0
scale_random = 1.0

[node name="Bullet01" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 23
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 23

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="ColParticles2D" type="Particles2D" parent="."]
emitting = false
amount = 14
one_shot = true
explosiveness = 0.8
randomness = 0.5
process_material = SubResource( 2 )

[node name="LifeTimeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="ColParticlesLifeTimeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="LifeTimeTimer" to="." method="_on_LifeTimeTimer_timeout"]
[connection signal="timeout" from="ColParticlesLifeTimeTimer" to="." method="_on_ColParticlesLifeTimeTimer_timeout"]
